<resources>
    <string name="app_name">CODEP25</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">CODEP25</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_settings">Settings</string>

    <string name="activity_splash_error_dialog_positive_button">OK</string>
    <string name="activity_splash_unknown_error">Your phone cannot launch this app for some reasons, please contact developers for more details</string>
    <string name="activity_splash_logo_desc">@string/app_name</string>
    <string name="menu_participants">Participants</string>
    <string name="participant_row_item_participant_icon_desc">participant icon</string>
    <string name="participant_row_item_name_placeholder">name</string>
    <string name="participant_row_item_level_txt">Level : %1$d</string>
    <string name="participant_row_item_team_txt">Team : %1$s</string>
    <string name="participant_row_item_team_position_txt">Position : %1$s</string>
    <string name="fragment_participants_delete_text">Remove all participants</string>
    <string name="fragment_participants_create_text">Create a new participant</string>
    <string name="named_fab_placeholder">Named fab</string>
    <string name="fragment_participants_export_text">Export participants</string>
    <string name="fragment_participants_import_text">Import participants</string>
    <string name="fragment_participants_participants_state_loading">Loading participants…</string>
    <string name="fragment_participants_participants_state_no">No participant</string>
    <string name="fragment_player_edit_new_player">New player</string>
    <string name="fragment_player_edit_edit_player">Edit player</string>
    <string name="fragment_player_edit_player_name_hint">Player name</string>
    <string name="fragment_player_edit_player_level">Player level : %1$d</string>
    <string name="fragment_player_edit_remove_player">Remove player</string>
    <string name="fragment_player_edit_add_player">Add player</string>
    <string name="fragment_participants_player_added_from_file">Successfully added %1$d players.</string>
    <string name="fragment_participants_player_added_to_file">Successfully written %1$d players.</string>
    <string name="fragment_participants_remove_all_warn">Warning this operation cannot be undone! Are you sure you want to delete all participants?</string>

    <string name="fragment_teams_changed_warn">Warning it seems that something has changed in participants list or in settings. Do you want to regenerate teams?</string>
    <string name="fragment_team_name_title">%1$s (lvl: %2$d)</string>

    <string name="error_failed_to_parse_file">Unable to open the file. Please verify the file format.</string>
    <string name="error_failed_to_write_file">Unable to write the file.</string>
    <string name="error_failed_to_add_participant">Unable to add the participant. Please contact the moderators.</string>
    <string name="error_failed_to_update_participant">Unable to update the participant. Please contact the moderators.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="team_name_format">%1$s\'s team</string>
    <string name="menu_race">New race</string>
    <string name="fragment_race_start_txt">Start</string>
    <string name="fragment_race_stop_txt">Stop</string>
    <string name="fragment_race_not_fished_warn">Warning: all participants are not arrived, the record will be dropped. Do you want to continue?</string>
    <string name="fragment_race_no_team">You first need to create participants and teams before using this section.</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="race_row_item_team_name_placeholder">Team name</string>
    <string name="race_row_item_team_chronometer_placeholder">00:00</string>
    <string name="race_row_item_participant_placeholder">James</string>
    <string name="race_row_item_turn_no_placeholder">1</string>
    <string name="race_row_item_img_desc">Race sate</string>
    <string name="fragment_race_view_results_txt">View results</string>
    <string name="fragment_races_resusults_no_available_races">No available races :(</string>
    <string name="menu_races_results">Races results</string>
    <string name="race_result_item_date_placeholder">00/00/0000 00:00</string>

    <string name="activity_results_title">Results</string>
    <string name="activity_results_race_retrieve_error">Unable to retrieve the race :(</string>
    <string name="race_team_item_name_place_holder">Team Name</string>
    <string name="race_team_item_time_placeholder">00:00</string>
    <string name="sprint_state">Sprint</string>
    <string name="pit_stop_state">Pit Stop</string>
    <string name="hurdle">Hurdle</string>
    <string name="activity_race_all_times_title">All times</string>
    <string name="activity_race_top_3_pit_stops">Top 3 pit stops</string>
    <string name="activity_race_top_3_hurdles">Top 3 hurdles</string>
    <string name="activity_race_top_3_sprints">Top 3 sprints</string>
    <string name="activity_race_top_3_times">Top 3 times</string>
    <string name="incorrect_participants_number">It seems that the number of participants is not a multiple of three. Please add or remove participants and try again.</string>
    <string name="draggable_description">Draggable</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="fragment_settings_apply_changes_btn_text">Apply changes</string>
    <string name="fragment_settings_max_team_level_hint">Max team level</string>
    <string name="fragment_settings_number_of_participants_per_team_hint">Number of participants per team</string>
    <string name="fragment_settings_invalid_params">Invalid parameters</string>
    <string name="fragment_settings_level_fit_warning">Warning: some level will be collapsed to fit with the new level. Do you want to continue?</string>
    <string name="fragment_settings_applied">Settings successfully updated!</string>
    <string name="fragment_settings_color_picker">Pick a new color</string>
    <string name="participant_color_item_text">Color for participant number %1$d</string>
    <string name="fragment_settings_color_settings">Color settings</string>
    <string name="fragment_settings_general_settings">General settings</string>
    <string name="fragment_team_management_re_create_teams_fab">Re-create teams</string>
    <string name="fragment_team_management_re_create_teams_ask">This action will erase old teams. Do you want to continue?</string>
</resources>