<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.codep25.codep25.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_participants"
        android:name="com.codep25.codep25.ui.fragment.ParticipantsFragment"
        android:label="@string/menu_participants"
        tools:layout="@layout/fragment_participants" />

    <fragment
        android:id="@+id/nav_teams"
        android:name="com.codep25.codep25.ui.fragment.TeamManagementFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_team_management_list" />

    <fragment
        android:id="@+id/nav_race"
        android:name="com.codep25.codep25.ui.fragment.RaceFragment"
        android:label="@string/menu_race"
        tools:layout="@layout/fragment_race" />

    <fragment
        android:id="@+id/nav_races_result"
        android:name="com.codep25.codep25.ui.fragment.RacesResultsFragment"
        android:label="@string/menu_races_results"
        tools:layout="@layout/fragment_races_results" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.codep25.codep25.ui.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>