<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:contentPadding="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/team_name_text_view"
            style="@style/Title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/race_row_item_team_name_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/race_item_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/race_row_item_team_chronometer_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/team_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/team_name_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/participant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race_row_item_participant_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_name_text_view" />

        <ImageView
            android:id="@+id/race_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/participant_name"
            app:srcCompat="@drawable/ic_pit_stop"
            android:contentDescription="@string/race_row_item_img_desc" />

        <TextView
            android:id="@+id/race_nb_turn_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/race_row_item_turn_no_placeholder"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/race_image"
            app:layout_constraintEnd_toStartOf="@+id/race_image"
            app:layout_constraintTop_toTopOf="@+id/race_image"
            app:layout_constraintVertical_bias="0.050000012" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:max="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/race_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>