<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/operation_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_player_edit_new_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_player_edit_player_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/player_name_input"
        app:layout_constraintStart_toStartOf="@+id/player_name_input"
        app:layout_constraintTop_toBottomOf="@+id/player_level_text"
        android:max="100"/>

    <TextView
        android:id="@+id/player_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_player_edit_player_level"
        app:layout_constraintStart_toStartOf="@+id/player_name_input"
        app:layout_constraintTop_toBottomOf="@+id/player_name_input" />

    <Button
        android:id="@+id/remove_button"
        style="@style/AllCapsButtonNoBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E53935"
        android:text="@string/fragment_player_edit_remove_player"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/add_player_btn"
        style="@style/AllCapsButtonNoBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint= "@drawable/green_button_background"
        android:text="@string/fragment_player_edit_add_player"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/remove_button" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/AllCapsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/add_player_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>