<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_participant_row_height"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/participant_img"
            android:layout_width="@dimen/item_participant_row_img_size"
            android:layout_height="@dimen/item_participant_row_img_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/participant_row_item_participant_icon_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_participants" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/participant_row_item_name_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/participant_img"
            app:layout_constraintTop_toTopOf="@+id/participant_img" />

        <TextView
            android:id="@+id/level_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/participant_row_item_level_txt"
            app:layout_constraintStart_toStartOf="@+id/name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/participant_row_item_team_txt"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/name_text_view" />

        <TextView
            android:id="@+id/position_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/participant_row_item_team_position_txt"
            app:layout_constraintStart_toStartOf="@+id/team_text_view"
            app:layout_constraintTop_toTopOf="@+id/level_text_view" />

        <CheckBox
            android:id="@+id/select_button"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>