<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ParticipantsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorSecond"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_all_checkbox" />

    <View
        android:id="@+id/fab_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone"/>

    <com.codep25.codep25.ui.view.NamedFab
        android:id="@+id/import_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/export_fab"
        app:layout_constraintEnd_toEndOf="@+id/export_fab"
        app:namedFabIcon="@drawable/ic_import"
        app:namedFabSize="mini"
        app:text="@string/fragment_participants_import_text"
        app:textColor="#FFFFFF" />

    <com.codep25.codep25.ui.view.NamedFab
        android:id="@+id/export_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/delete_fab"
        app:layout_constraintEnd_toEndOf="@+id/delete_fab"
        app:namedFabIcon="@drawable/ic_export"
        app:namedFabSize="mini"
        app:text="@string/fragment_participants_export_text"
        app:textColor="#FFFFFF" />

    <com.codep25.codep25.ui.view.NamedFab
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/create_fab"
        app:layout_constraintEnd_toEndOf="@+id/create_fab"
        app:namedFabIcon="@drawable/ic_delete"
        app:namedFabSize="mini"
        app:text="@string/fragment_participants_delete_text"
        app:textColor="#FFFFFF" />

    <com.codep25.codep25.ui.view.NamedFab
        android:id="@+id/create_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:namedFabIcon="@drawable/ic_add"
        app:namedFabSize="mini"
        app:text="@string/fragment_participants_create_text"
        app:textColor="#FFFFFF" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:focusable="true" />

    <TextView
        android:id="@+id/participants_state_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_participants_participants_state_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_all_checkbox" />

    <CheckBox
        android:id="@+id/select_all_checkbox"
        style="@android:style/Widget.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@android:string/selectAll"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>